--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,7 @@ python_version = "3.10"
 warn_unused_configs = true
 warn_unused_ignores = true
 warn_redundant_casts = true
+ignore_missing_imports = true
 enable_incomplete_feature = "TypeVarTuple,Unpack"
 
 [tool.black]
@@ -92,16 +93,6 @@ profile = "black"
 target-version = "py310"
 line-length = 119
 fix = true
-ignore = [
-    "E731",  # do not assign a lambda expression, use a def
-    "E402",  # module level import not at top of file
-    "E402",  # module level import not at top of file
-    "E501",  # line too long
-    "E741", # do not use variables named 'l', 'O', or 'I'
-]
-
-[tool.flake8]
-max-line-length = 119
 ignore = [
     "E731",  # do not assign a lambda expression, use a def
     "E402",  # module level import not at top of file
