--- a/.gitignore
+++ b/.gitignore
@@ -77,7 +77,11 @@ target/
 
 # Jupyter Notebook
 .ipynb_checkpoints
-
+.local
+.config
+.ipython_config
+.nv
+sevir-volume
 # IPython
 profile_default/
 ipython_config.py
