--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,11 +66,11 @@ all = [
 
 [tool.mypy]
 python_version = "3.10"
-# warn_unused_configs = true
 warn_unused_ignores = true
 warn_redundant_casts = true
 ignore_missing_imports = true
 enable_incomplete_feature = "TypeVarTuple,Unpack"
+exclude = ["docs/"]
 
 [tool.setuptools]
 include-package-data = true
@@ -79,7 +79,7 @@ include-package-data = true
 where = ["src/"]
 
 [tool.setuptools.package-data]
-sevir = ["py.typed"]
+sevir = ["py.typed", "config.json"]
 
 [tool.pytest]
 testpaths = ["tests/"]
