--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "pandas==2.0.3",
     "tqdm==4.65.0",
     "typing_extensions==4.7.1",
+    "scipy==1.11.1",
 ]
 
 [project.optional-dependencies]
@@ -66,6 +67,7 @@ all = [
 
 [tool.mypy]
 python_version = "3.10"
+platform = "linux"
 warn_unused_ignores = true
 warn_redundant_casts = true
 ignore_missing_imports = true
