--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,10 +31,13 @@ dependencies = [
     "polars==0.18.7",
     "pyarrow==12.0.1",
     "h5py==3.9.0",
-    "pandas==2.0.3",
     "tqdm==4.65.0",
     "typing_extensions==4.7.1",
     "scipy==1.11.1",
+    # - extracting mrms and probsevere data
+    "pandas==2.0.3",
+    "requests==2.31.0",
+    "lxml==4.9.3",
 ]
 
 [project.optional-dependencies]
@@ -72,7 +75,7 @@ warn_unused_ignores = true
 warn_redundant_casts = true
 ignore_missing_imports = true
 enable_incomplete_feature = "TypeVarTuple,Unpack"
-exclude = ["docs/"]
+exclude = ["docs/", "src/sevir/models/*"]
 
 [tool.setuptools]
 include-package-data = true
