--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,11 @@
 # setup.cfg or other tool-specific files.
 # https://github.com/carlosperate/awesome-pyproject
 [build-system]
-requires = ["setuptools"]
-build-backend = "setuptools.build_meta"
+# requires = ["setuptools"]
+# build-backend = "setuptools.build_meta"
+# [build-system]
+requires = ["maturin>=1.0,<2.0", "setuptools"]
+build-backend = "maturin"
 
 [project]
 name = "sevir"
@@ -68,6 +71,23 @@ all = [
     "jupyter-black",
 ]
 
+[tool.maturin] # https://www.maturin.rs/
+# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
+# features = ["pyo3/extension-module"]
+python-source = "python"
+module-name = "sevir._lib"
+# include = [{ path = "sevir/**/*", format = "sdist" }]
+# bindings = "cffi"
+# compatibility = "linux"
+# [tool.setuptools]
+# include-package-data = true
+
+# [tool.setuptools.packages.find]
+# where = ["sevir/"]
+
+# [tool.setuptools.package-data]
+# sevir = ["py.typed", "config.json"]
+
 [tool.mypy]
 python_version = "3.10"
 platform = "linux"
@@ -76,15 +96,6 @@ warn_redundant_casts = true
 ignore_missing_imports = true
 enable_incomplete_feature = "TypeVarTuple,Unpack"
 exclude = ["docs/", "src/sevir/models/*"]
-
-[tool.setuptools]
-include-package-data = true
-
-[tool.setuptools.packages.find]
-where = ["src/"]
-
-[tool.setuptools.package-data]
-sevir = ["py.typed", "config.json"]
 
 [tool.pytest]
 testpaths = ["tests/"]
