--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,15 +3,11 @@ name = "sevir"
 version = "0.1.0"
 edition = "2021"
 
-[lib]
-name = "sevir_lib"
 # "cdylib" is necessary to produce a shared library for Python to import from.
+[lib]
+name = "_lib"
 crate-type = ["cdylib"]
 
 [dependencies]
 rand = "0.8.4"
-
-[dependencies.pyo3]
-version = "0.18.0"
-# "abi3-py37" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.7
-features = ["abi3-py37"]
+pyo3 = "0.19.0"
